--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- css dosyanızı ekleyiniz-->
+    <link href="index.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Caveat|Lato" rel="stylesheet">
     <title>Food El Blog</title>
 </head>
 
 <body>
+    <div class="container">
+        <section id="header">
+            <header>
+                <h1>Food El Blog</h1>
+                <nav>
+                    <a href="#">Ana Sayfa</a>
+                    <a href="#">Aperatifler</a>
+                    <a href="#">Vegan</a>
+                    <a href="#">Yemekler</a>
+                    <a href="#">Tatlılar</a>
+                    <a href="#">İçecekler</a>
+                </nav>
+            </header>
+            <img id="banner" src="/images/banner.png"/>
+        </section>
 
+    </div>
     <!-- Kurum adı-->
     Food El Blog
 
