--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
             </header>
             <img id="banner" src="/images/banner.png"/>
         </section>
-
+        
+        <section id="about-us">
+            <h2>Hakkımızda</h2>
+            <p>
+                Yaygınlaşmış küresel gıda anlayışına göre hamburger; belirli fast food zincirlerinin yapım süreçleri ve kullandıkları 
+                malzemeler nedeniyle “sağlıksızdır ve kilo aldırır” gibi negatif bir imaja sahip. Bu nedenle son 10 yılı domine eden 
+                sağlıklı yaşam trendleri dışında bırakılmıştır.  “Hamburgersiz de yaşanır “, iddialıyız. Fool El Blog, bugüne kadar 
+                yediğiniz tüm burgerleri size unutturacak kadar eşsiz yaratıldı.
+            </p>
+        </section>
     </div>
     <!-- Kurum adı-->
     Food El Blog
